fix off-screen download bug

--- a/countries/src/components/SearchBar/SearchBar.scss
+++ b/countries/src/components/SearchBar/SearchBar.scss
@@ -12,6 +12,7 @@
 		border: 1px solid $gray-1;
 		padding: 20px;
 		font-size: 18px;
+		background-color: white;
 	}
 }
 
